[fix] 포트번호 수정